--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
@@ -8,13 +9,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="30sp"
-        android:fontFamily="serif-monospace"
+        android:fontFamily="casual"
         android:textColor="@color/colorAccent"
         android:textStyle="bold"
+        android:layout_weight="2"
         android:elegantTextHeight="true"
         android:textAlignment="viewStart"
         android:layout_gravity="start"
-        android:layout_weight="2"
+
         />
 
     <TextView
@@ -22,10 +24,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:elegantTextHeight="true"
-        android:layout_weight="1"
         android:textSize="20sp"
-        android:textAlignment="viewEnd"
         android:layout_gravity="end"
+        android:textAlignment="viewEnd"
+        android:layout_weight="1"
         android:background="@color/design_default_color_primary"
         />
 
